crates/rstest-bdd/tests/fixtures_macros/scenario_harness_not_default.stderr
error[E0277]: the trait bound `NoDefaultHarness: Default` is not satisfied
  --> tests/fixtures_macros/scenario_harness_not_default.rs:23:15
   |
23 |     harness = NoDefaultHarness,
   |               ^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefaultHarness`
   |
note: required by a bound in `__assert_harness`
  --> tests/fixtures_macros/scenario_harness_not_default.rs:21:1
   |
21 | / #[scenario(
22 | |     path = "basic.feature",
23 | |     harness = NoDefaultHarness,
24 | | )]
   | |__^ required by this bound in `__assert_harness`
   = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefaultHarness` with `#[derive(Default)]`
   |
 4 + #[derive(Default)]
 5 | struct NoDefaultHarness;
   |
